src/tiger.output
Terminals unused in grammar

   UNKNOWN


State 10 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 22 conflicts: 8 shift/reduce
State 23 conflicts: 2 shift/reduce
State 75 conflicts: 1 shift/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 79 conflicts: 2 shift/reduce
State 80 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce
State 82 conflicts: 2 shift/reduce
State 83 conflicts: 2 shift/reduce
State 84 conflicts: 2 shift/reduce
State 92 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expression

    2 breakable-expression: BREAK
    3                     | expression

    4 expression: if-then-else
    5           | if-then
    6           | while
    7           | for
    8           | let-expression
    9           | assignment-expression
   10           | logical-or-expression

   11 if-then-else: IF expression THEN expression ELSE expression

   12 if-then: IF expression THEN expression

   13 for: FOR IDENTIFIER ASSIGN expression TO expression DO breakable-expression

   14 while: WHILE expression DO breakable-expression

   15 let-expression: LET space-separated-declaration IN semicolon-separated-expression END

   16 semicolon-separated-expression: %empty
   17                               | nonempty-semicolon-separated-expression

   18 nonempty-semicolon-separated-expression: expression
   19                                        | semicolon-separated-expression SEMICOLON expression

   20 assignment-expression: lvalue-expression ASSIGN expression

   21 logical-or-expression: logical-and-expression
   22                      | logical-or-expression OR logical-and-expression

   23 logical-and-expression: equality-expression
   24                       | logical-and-expression AND equality-expression

   25 equality-expression: additive-expression
   26                    | additive-expression EQ additive-expression
   27                    | additive-expression NEQ additive-expression
   28                    | additive-expression LT additive-expression
   29                    | additive-expression LE additive-expression
   30                    | additive-expression GT additive-expression
   31                    | additive-expression GE additive-expression

   32 additive-expression: multiplicative-expression
   33                    | additive-expression PLUS multiplicative-expression
   34                    | additive-expression MINUS multiplicative-expression

   35 multiplicative-expression: unary-expression
   36                          | multiplicative-expression TIMES unary-expression
   37                          | multiplicative-expression DIVIDE unary-expression

   38 unary-expression: postfix-expression
   39                 | MINUS unary-expression

   40 postfix-expression: lvalue-expression
   41                   | STRING
   42                   | INT
   43                   | NIL
   44                   | LPAREN semicolon-separated-expression RPAREN
   45                   | IDENTIFIER LPAREN comma-separated-expression RPAREN
   46                   | IDENTIFIER LBRACE comma-separated-record-field RBRACE
   47                   | IDENTIFIER LBRACKET expression RBRACKET OF expression

   48 lvalue-expression: IDENTIFIER
   49                  | IDENTIFIER LBRACKET expression RBRACKET
   50                  | lvalue-expression LBRACKET expression RBRACKET
   51                  | lvalue-expression DOT IDENTIFIER

   52 comma-separated-record-field: %empty
   53                             | nonempty-comma-separated-record-field

   54 nonempty-comma-separated-record-field: IDENTIFIER EQ expression
   55                                      | comma-separated-record-field COMMA IDENTIFIER EQ expression

   56 comma-separated-expression: %empty
   57                           | nonempty-comma-separated-expression

   58 nonempty-comma-separated-expression: expression
   59                                    | comma-separated-expression COMMA expression

   60 space-separated-declaration: %empty
   61                            | space-separated-declaration declaration

   62 declaration: function-declaration
   63            | variable-declaration
   64            | type-declaration

   65 type-declaration: TYPE IDENTIFIER EQ type

   66 type: IDENTIFIER
   67     | ARRAY OF IDENTIFIER
   68     | record-type

   69 record-type: LBRACE comma-separated-field RBRACE

   70 comma-separated-field: IDENTIFIER COLON IDENTIFIER
   71                      | comma-separated-field COMMA IDENTIFIER COLON IDENTIFIER

   72 function-declaration: FUNCTION IDENTIFIER LPAREN comma-separated-parameter RPAREN COLON IDENTIFIER EQ expression
   73                     | FUNCTION IDENTIFIER LPAREN comma-separated-parameter RPAREN EQ expression

   74 comma-separated-parameter: %empty
   75                          | nonempty-comma-separated-parameter

   76 nonempty-comma-separated-parameter: IDENTIFIER COLON IDENTIFIER
   77                                   | comma-separated-parameter COMMA IDENTIFIER COLON IDENTIFIER

   78 variable-declaration: VAR IDENTIFIER nullable-colon-type ASSIGN expression

   79 nullable-colon-type: %empty
   80                    | COLON IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
LPAREN (258) 44 45 72 73
RPAREN (259) 44 45 72 73
LBRACKET (260) 47 49 50
RBRACKET (261) 47 49 50
LBRACE (262) 46 69
RBRACE (263) 46 69
ASSIGN (264) 13 20 78
COLON (265) 70 71 72 76 77 80
DOT (266) 51
COMMA (267) 55 59 71 77
SEMICOLON (268) 19
TIMES (269) 36
DIVIDE (270) 37
PLUS (271) 33
MINUS (272) 34 39
EQ (273) 26 54 55 65 72 73
NEQ (274) 27
GT (275) 30
LT (276) 28
GE (277) 31
LE (278) 29
AND (279) 24
OR (280) 22
ARRAY (281) 67
BREAK (282) 2
DO (283) 13 14
ELSE (284) 11
END (285) 15
FOR (286) 13
FUNCTION (287) 72 73
IF (288) 11 12
IN (289) 15
LET (290) 15
NIL (291) 43
OF (292) 47 67
THEN (293) 11 12
TO (294) 13
TYPE (295) 65
VAR (296) 78
WHILE (297) 14
UNKNOWN (298)
INT (299) 42
STRING (300) 41
IDENTIFIER (301) 13 45 46 47 48 49 51 54 55 65 66 67 70 71 72 73 76
    77 78 80


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
breakable-expression (49)
    on left: 2 3, on right: 13 14
expression (50)
    on left: 4 5 6 7 8 9 10, on right: 1 3 11 12 13 14 18 19 20 47
    49 50 54 55 58 59 72 73 78
if-then-else (51)
    on left: 11, on right: 4
if-then (52)
    on left: 12, on right: 5
for (53)
    on left: 13, on right: 7
while (54)
    on left: 14, on right: 6
let-expression (55)
    on left: 15, on right: 8
semicolon-separated-expression (56)
    on left: 16 17, on right: 15 19 44
nonempty-semicolon-separated-expression (57)
    on left: 18 19, on right: 17
assignment-expression (58)
    on left: 20, on right: 9
logical-or-expression (59)
    on left: 21 22, on right: 10 22
logical-and-expression (60)
    on left: 23 24, on right: 21 22 24
equality-expression (61)
    on left: 25 26 27 28 29 30 31, on right: 23 24
additive-expression (62)
    on left: 32 33 34, on right: 25 26 27 28 29 30 31 33 34
multiplicative-expression (63)
    on left: 35 36 37, on right: 32 33 34 36 37
unary-expression (64)
    on left: 38 39, on right: 35 36 37 39
postfix-expression (65)
    on left: 40 41 42 43 44 45 46 47, on right: 38
lvalue-expression (66)
    on left: 48 49 50 51, on right: 20 40 50 51
comma-separated-record-field (67)
    on left: 52 53, on right: 46 55
nonempty-comma-separated-record-field (68)
    on left: 54 55, on right: 53
comma-separated-expression (69)
    on left: 56 57, on right: 45 59
nonempty-comma-separated-expression (70)
    on left: 58 59, on right: 57
space-separated-declaration (71)
    on left: 60 61, on right: 15 61
declaration (72)
    on left: 62 63 64, on right: 61
type-declaration (73)
    on left: 65, on right: 64
type (74)
    on left: 66 67 68, on right: 65
record-type (75)
    on left: 69, on right: 68
comma-separated-field (76)
    on left: 70 71, on right: 69 71
function-declaration (77)
    on left: 72 73, on right: 62
comma-separated-parameter (78)
    on left: 74 75, on right: 72 73 77
nonempty-comma-separated-parameter (79)
    on left: 76 77, on right: 75
variable-declaration (80)
    on left: 78, on right: 63
nullable-colon-type (81)
    on left: 79 80, on right: 78


State 0

    0 $accept: . program $end

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    program                    go to state 11
    expression                 go to state 12
    if-then-else               go to state 13
    if-then                    go to state 14
    for                        go to state 15
    while                      go to state 16
    let-expression             go to state 17
    assignment-expression      go to state 18
    logical-or-expression      go to state 19
    logical-and-expression     go to state 20
    equality-expression        go to state 21
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 26


State 1

   44 postfix-expression: LPAREN . semicolon-separated-expression RPAREN

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 16 (semicolon-separated-expression)

    expression                               go to state 27
    if-then-else                             go to state 13
    if-then                                  go to state 14
    for                                      go to state 15
    while                                    go to state 16
    let-expression                           go to state 17
    semicolon-separated-expression           go to state 28
    nonempty-semicolon-separated-expression  go to state 29
    assignment-expression                    go to state 18
    logical-or-expression                    go to state 19
    logical-and-expression                   go to state 20
    equality-expression                      go to state 21
    additive-expression                      go to state 22
    multiplicative-expression                go to state 23
    unary-expression                         go to state 24
    postfix-expression                       go to state 25
    lvalue-expression                        go to state 26


State 2

   39 unary-expression: MINUS . unary-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    unary-expression    go to state 30
    postfix-expression  go to state 25
    lvalue-expression   go to state 31


State 3

   13 for: FOR . IDENTIFIER ASSIGN expression TO expression DO breakable-expression

    IDENTIFIER  shift, and go to state 32


State 4

   11 if-then-else: IF . expression THEN expression ELSE expression
   12 if-then: IF . expression THEN expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    expression                 go to state 33
    if-then-else               go to state 13
    if-then                    go to state 14
    for                        go to state 15
    while                      go to state 16
    let-expression             go to state 17
    assignment-expression      go to state 18
    logical-or-expression      go to state 19
    logical-and-expression     go to state 20
    equality-expression        go to state 21
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 26


State 5

   15 let-expression: LET . space-separated-declaration IN semicolon-separated-expression END

    $default  reduce using rule 60 (space-separated-declaration)

    space-separated-declaration  go to state 34


State 6

   43 postfix-expression: NIL .

    $default  reduce using rule 43 (postfix-expression)


State 7

   14 while: WHILE . expression DO breakable-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    expression                 go to state 35
    if-then-else               go to state 13
    if-then                    go to state 14
    for                        go to state 15
    while                      go to state 16
    let-expression             go to state 17
    assignment-expression      go to state 18
    logical-or-expression      go to state 19
    logical-and-expression     go to state 20
    equality-expression        go to state 21
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 26


State 8

   42 postfix-expression: INT .

    $default  reduce using rule 42 (postfix-expression)


State 9

   41 postfix-expression: STRING .

    $default  reduce using rule 41 (postfix-expression)


State 10

   45 postfix-expression: IDENTIFIER . LPAREN comma-separated-expression RPAREN
   46                   | IDENTIFIER . LBRACE comma-separated-record-field RBRACE
   47                   | IDENTIFIER . LBRACKET expression RBRACKET OF expression
   48 lvalue-expression: IDENTIFIER .
   49                  | IDENTIFIER . LBRACKET expression RBRACKET

    LPAREN    shift, and go to state 36
    LBRACKET  shift, and go to state 37
    LBRACE    shift, and go to state 38

    LBRACKET  [reduce using rule 48 (lvalue-expression)]
    $default  reduce using rule 48 (lvalue-expression)


State 11

    0 $accept: program . $end

    $end  shift, and go to state 39


State 12

    1 program: expression .

    $default  reduce using rule 1 (program)


State 13

    4 expression: if-then-else .

    $default  reduce using rule 4 (expression)


State 14

    5 expression: if-then .

    $default  reduce using rule 5 (expression)


State 15

    7 expression: for .

    $default  reduce using rule 7 (expression)


State 16

    6 expression: while .

    $default  reduce using rule 6 (expression)


State 17

    8 expression: let-expression .

    $default  reduce using rule 8 (expression)


State 18

    9 expression: assignment-expression .

    $default  reduce using rule 9 (expression)


State 19

   10 expression: logical-or-expression .
   22 logical-or-expression: logical-or-expression . OR logical-and-expression

    OR  shift, and go to state 40

    OR        [reduce using rule 10 (expression)]
    $default  reduce using rule 10 (expression)


State 20

   21 logical-or-expression: logical-and-expression .
   24 logical-and-expression: logical-and-expression . AND equality-expression

    AND  shift, and go to state 41

    AND       [reduce using rule 21 (logical-or-expression)]
    $default  reduce using rule 21 (logical-or-expression)


State 21

   23 logical-and-expression: equality-expression .

    $default  reduce using rule 23 (logical-and-expression)


State 22

   25 equality-expression: additive-expression .
   26                    | additive-expression . EQ additive-expression
   27                    | additive-expression . NEQ additive-expression
   28                    | additive-expression . LT additive-expression
   29                    | additive-expression . LE additive-expression
   30                    | additive-expression . GT additive-expression
   31                    | additive-expression . GE additive-expression
   33 additive-expression: additive-expression . PLUS multiplicative-expression
   34                    | additive-expression . MINUS multiplicative-expression

    PLUS   shift, and go to state 42
    MINUS  shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    GT     shift, and go to state 46
    LT     shift, and go to state 47
    GE     shift, and go to state 48
    LE     shift, and go to state 49

    PLUS      [reduce using rule 25 (equality-expression)]
    MINUS     [reduce using rule 25 (equality-expression)]
    EQ        [reduce using rule 25 (equality-expression)]
    NEQ       [reduce using rule 25 (equality-expression)]
    GT        [reduce using rule 25 (equality-expression)]
    LT        [reduce using rule 25 (equality-expression)]
    GE        [reduce using rule 25 (equality-expression)]
    LE        [reduce using rule 25 (equality-expression)]
    $default  reduce using rule 25 (equality-expression)


State 23

   32 additive-expression: multiplicative-expression .
   36 multiplicative-expression: multiplicative-expression . TIMES unary-expression
   37                          | multiplicative-expression . DIVIDE unary-expression

    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51

    TIMES     [reduce using rule 32 (additive-expression)]
    DIVIDE    [reduce using rule 32 (additive-expression)]
    $default  reduce using rule 32 (additive-expression)


State 24

   35 multiplicative-expression: unary-expression .

    $default  reduce using rule 35 (multiplicative-expression)


State 25

   38 unary-expression: postfix-expression .

    $default  reduce using rule 38 (unary-expression)


State 26

   20 assignment-expression: lvalue-expression . ASSIGN expression
   40 postfix-expression: lvalue-expression .
   50 lvalue-expression: lvalue-expression . LBRACKET expression RBRACKET
   51                  | lvalue-expression . DOT IDENTIFIER

    LBRACKET  shift, and go to state 52
    ASSIGN    shift, and go to state 53
    DOT       shift, and go to state 54

    $default  reduce using rule 40 (postfix-expression)


State 27

   18 nonempty-semicolon-separated-expression: expression .

    $default  reduce using rule 18 (nonempty-semicolon-separated-expression)


State 28

   19 nonempty-semicolon-separated-expression: semicolon-separated-expression . SEMICOLON expression
   44 postfix-expression: LPAREN semicolon-separated-expression . RPAREN

    RPAREN     shift, and go to state 55
    SEMICOLON  shift, and go to state 56


State 29

   17 semicolon-separated-expression: nonempty-semicolon-separated-expression .

    $default  reduce using rule 17 (semicolon-separated-expression)


State 30

   39 unary-expression: MINUS unary-expression .

    $default  reduce using rule 39 (unary-expression)


State 31

   40 postfix-expression: lvalue-expression .
   50 lvalue-expression: lvalue-expression . LBRACKET expression RBRACKET
   51                  | lvalue-expression . DOT IDENTIFIER

    LBRACKET  shift, and go to state 52
    DOT       shift, and go to state 54

    $default  reduce using rule 40 (postfix-expression)


State 32

   13 for: FOR IDENTIFIER . ASSIGN expression TO expression DO breakable-expression

    ASSIGN  shift, and go to state 57


State 33

   11 if-then-else: IF expression . THEN expression ELSE expression
   12 if-then: IF expression . THEN expression

    THEN  shift, and go to state 58


State 34

   15 let-expression: LET space-separated-declaration . IN semicolon-separated-expression END
   61 space-separated-declaration: space-separated-declaration . declaration

    FUNCTION  shift, and go to state 59
    IN        shift, and go to state 60
    TYPE      shift, and go to state 61
    VAR       shift, and go to state 62

    declaration           go to state 63
    type-declaration      go to state 64
    function-declaration  go to state 65
    variable-declaration  go to state 66


State 35

   14 while: WHILE expression . DO breakable-expression

    DO  shift, and go to state 67


State 36

   45 postfix-expression: IDENTIFIER LPAREN . comma-separated-expression RPAREN

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 56 (comma-separated-expression)

    expression                           go to state 68
    if-then-else                         go to state 13
    if-then                              go to state 14
    for                                  go to state 15
    while                                go to state 16
    let-expression                       go to state 17
    assignment-expression                go to state 18
    logical-or-expression                go to state 19
    logical-and-expression               go to state 20
    equality-expression                  go to state 21
    additive-expression                  go to state 22
    multiplicative-expression            go to state 23
    unary-expression                     go to state 24
    postfix-expression                   go to state 25
    lvalue-expression                    go to state 26
    comma-separated-expression           go to state 69
    nonempty-comma-separated-expression  go to state 70


State 37

   47 postfix-expression: IDENTIFIER LBRACKET . expression RBRACKET OF expression
   49 lvalue-expression: IDENTIFIER LBRACKET . expression RBRACKET

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    FOR         shift, and go to state 3
    IF          shift, and go to state 4
    LET         shift, and go to state 5
    NIL         shift, and go to state 6
    WHILE       shift, and go to state 7
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    expression                 go to state 71
    if-then-else               go to state 13
    if-then                    go to state 14
    for                        go to state 15
    while                      go to state 16
    let-expression             go to state 17
    assignment-expression      go to state 18
    logical-or-expression      go to state 19
    logical-and-expression     go to state 20
    equality-expression        go to state 21
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 26


State 38

   46 postfix-expression: IDENTIFIER LBRACE . comma-separated-record-field RBRACE

    IDENTIFIER  shift, and go to state 72

    $default  reduce using rule 52 (comma-separated-record-field)

    comma-separated-record-field           go to state 73
    nonempty-comma-separated-record-field  go to state 74


State 39

    0 $accept: program $end .

    $default  accept


State 40

   22 logical-or-expression: logical-or-expression OR . logical-and-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    logical-and-expression     go to state 75
    equality-expression        go to state 21
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 41

   24 logical-and-expression: logical-and-expression AND . equality-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    equality-expression        go to state 76
    additive-expression        go to state 22
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 42

   33 additive-expression: additive-expression PLUS . multiplicative-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    multiplicative-expression  go to state 77
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 43

   34 additive-expression: additive-expression MINUS . multiplicative-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    multiplicative-expression  go to state 78
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 44

   26 equality-expression: additive-expression EQ . additive-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    additive-expression        go to state 79
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 45

   27 equality-expression: additive-expression NEQ . additive-expression

    LPAREN      shift, and go to state 1
    MINUS       shift, and go to state 2
    NIL         shift, and go to state 6
    INT         shift, and go to state 8
    STRING      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    additive-expression        go to state 80
    multiplicative-expression  go to state 23
    unary-expression           go to state 24
    postfix-expression         go to state 25
    lvalue-expression          go to state 31


State 46

   30 equality-expression: additive-expression GT . additive-expression
